--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="wrapper">
         <div class="player"> 
-            <video id = "video"   src="https://media.w3.org/2010/05/sintel/trailer.mp4" poster="./images/bad.jpg"width="400"></video>
+            <video id = "video" src="https://media.w3.org/2010/05/sintel/trailer.mp4" poster="./images/sintel.jpg"width="400"></video>
             <div class="player-overlay">
                 <h2 class="player-title">Reproductor de video</h2>
                 <div class="player-actions">
